# student/handler/handler.go
@@ -52,50 +52,76 @@ func (s *service) GetAllStudent(ctx context.Context, empty *emptypb.Empty) (*pb.
 }
 
 func (s *service) CreateCourseEnrollment(ctx context.Context, req *pb.RequestCreateCourseEnrollment) (*pb.ResponseCreateCourseEnrollment, error) {
-	courseId := req.GetCourseId()
-	studentId := req.GetStudentId()
+	var enrolment *pb.Enrolment
+
 	grpcReq := &courseProto.RequestGetSingleCourse{
-		CourseId: courseId,
+		CourseId: req.GetCourseId(),
 	}
 	course, err := s.client.GetSingleCourse(context.Background(), grpcReq)
 	if err != nil {
 		fmt.Println(err)
 		return &pb.ResponseCreateCourseEnrollment{
-			Id:         studentId,
-			Name:       "",
-			CourseId:   courseId,
-			CourseName: "",
+			Enrolment: &pb.Enrolment{},
 			Status: &pb.Status{
 				Success: false,
-				Error:   "Course Not found",
+				Error:   "No course found",
+			},
+		}, err
+	}
+	std, err := s.repoistory.GetSingleStudent(req.StudentId)
+	if err != nil {
+		fmt.Println(err)
+		return &pb.ResponseCreateCourseEnrollment{
+			Enrolment: &pb.Enrolment{},
+			Status: &pb.Status{
+				Success: false,
+				Error:   "No student found",
 			},
 		}, err
 	}
 
-	reponse, err := s.repoistory.CreateCourseEnrollment(req, course.Course.Name)
+	enrolment = &pb.Enrolment{
+		Id:         std.Id,
+		Name:       std.Name,
+		CourseId:   course.Course.Id,
+		CourseName: course.Course.Name,
+	}
+	enrolment.CourseName = course.Course.Name
+
+	reponse, err := s.repoistory.CreateCourseEnrollment(enrolment)
 
 	if err != nil {
 		return &pb.ResponseCreateCourseEnrollment{
-			Id:         studentId,
-			Name:       "",
-			CourseId:   courseId,
-			CourseName: "",
-			Status:     &pb.Status{Success: false, Error: err.Error()},
+			Enrolment: reponse,
+			Status:    &pb.Status{Success: false, Error: err.Error()},
 		}, nil
 	}
 
 	return &pb.ResponseCreateCourseEnrollment{
-		Id:         reponse.Id,
-		Name:       "StudentName",
-		CourseId:   reponse.CourseId,
-		CourseName: reponse.CourseName,
+		Enrolment: reponse,
+		Status:    &pb.Status{},
+	}, nil
+}
+func (s *service) GetAllEnrollment(ctx context.Context, req *pb.RequestGetAllEnrollment) (*pb.ResponseGetAllEnrollment, error) {
+	studentId := req.GetId()
+	response, err := s.repoistory.GetAllEnrollment(studentId)
+	if err != nil {
+		return &pb.ResponseGetAllEnrollment{
+			Enrolment: response,
+			Status: &pb.Status{
+				Success: false,
+				Error:   "",
+			},
+		}, err
+	}
+	return &pb.ResponseGetAllEnrollment{
+		Enrolment: response,
 		Status: &pb.Status{
 			Success: true,
 			Error:   "",
 		},
 	}, nil
 }
-
 func NewService(repo repository.StudentRepository, client courseProto.CourseServiceClient) pb.StudentServiceServer {
 	return &service{
 		repoistory: repo,
